# bioinformatics_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  longtest.sh  test.sh
documentation/: .~lock.documentation.odt#  documentation.odt
fastaFiles/: Acetobacter_pasteurianus_ifo_3283_03.ASM1084v1.dna_rm.chromosome.pAPA03-010.fa  Acholeplasma_brassicae.ASM96791v1.dna.chromosome.Acholeplasma.fa  Vibrio_natriegens.ASM168008v1.dna.chromosome.2.fa
include/: FastaParser.h
results/: results.txt
results/testResults/: Vibrio.txt  acetobacter.txt  acholeplasma.txt  mobi_out.txt  vibrio_25_out.txt
results/testResults/test1/: results10_10.txt  results1_10.txt  results2_10.txt  results3_10.txt  results4_10.txt  results5_10.txt  results6_10.txt  results7_10.txt  results8_10.txt  results9_10.txt
results/testResults/test10/: results10_10.txt  results1_10.txt  results2_10.txt  results3_10.txt  results4_10.txt  results5_10.txt  results6_10.txt  results7_10.txt  results8_10.txt  results9_10.txt
results/testResults/test2/: results10_10.txt  results1_10.txt  results2_10.txt  results3_10.txt  results4_10.txt  results5_10.txt  results6_10.txt  results7_10.txt  results8_10.txt  results9_10.txt
results/testResults/test3/: results10_10.txt  results1_10.txt  results2_10.txt  results3_10.txt  results4_10.txt  results5_10.txt  results6_10.txt  results7_10.txt  results8_10.txt  results9_10.txt
results/testResults/test4/: results10_10.txt  results1_10.txt  results2_10.txt  results3_10.txt  results4_10.txt  results5_10.txt  results6_10.txt  (+3 more)
src/: FastaParser.cpp  main.cpp
(+50 files in other folders)
